# MLPython

./: .gitignore  README.md  index.py  pyproject.toml
demo/: __init__.py  demo.py
graph/: graph.py
models/: data_set.py
tests/: test_machinelearning.py
